--- a/src/app/avaliation/dobras/pb4/pb4.component.html
+++ b/src/app/avaliation/dobras/pb4/pb4.component.html
@@ -253,6 +253,8 @@
                             <mat-icon>save</mat-icon>
                         </button>
                     </div>
+                    <!-- Painel informativo dos pesos -->
+                    <app-dobras-painel-info [pesos]="pesos"></app-dobras-painel-info>
                 </div>
                 <!-- charts -->
                 <div class="chart-pie" *ngIf="chartSelected=='pie'">
